server/public/styles/style.css
/************ CMarks Header ************/
.user-header {
    min-height: 75px;
    position: fixed;
}

.app-heading {
    font-size: 48px;
}

.title-header {
    min-height: 75px;
    position: fixed;
}

/************ Side Navigation ************/
.md-sidenav-right {
    position: fixed;
}

md-backdrop {
    position: fixed;
}

.nav-divider {
    margin: 0 auto;
    width: 80%;
    font-size: 18pt;
    font-weight: bold;
    border-bottom: 1px solid #F44336;
    text-align: center;
    padding: 20px;
}

#first-divider {
    margin-top: 100px;
}

#add-event {
    margin-top: 90px;
}

.nav-link > a {
    text-decoration: none;
    color: #ffffff;
    width: 100%;
    text-align: center;
    padding: 20px;
    font-size: 14pt;
}

.nav-link > a:hover {
    color: #F44336;
}

.logout-btn {
    position: absolute !important;
    bottom: 30px;
    right: 30px;
    font-size: 14pt;
}

/************ Login Styles ************/
.login-btn {
    text-align: center;
    /* height: 50px; */
    width: 300px;
    border-radius: 5px;
}
.socialLogin {
    text-decoration: none;
}
.socialLoginContainer {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 20px;
}

.loginContainer {
    text-align: center;
    height: 100vh;
    margin: auto 0;
    background-image: url('../assets/christian-fregnan-339342-unsplash.jpg'); 
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
}
.loginHeadingContainer {
    font-size: 46px;
    background-color: #F44336;
    width: 100%;
    opacity: .8;
}
.loginIcon {
    text-align: center;
    padding: 0 10px 0 10px;
}
.icon-position {
    display: flex;
    flex: wrap;
    justify-content: center;
}
.loginHeader {
    width: 100%;
    font-size: 18px;
    padding-left: 20px;
    border-left: 1px solid black;
}

/************ Manage Events Styles ************/
.heading {
    text-align: center;
    border-bottom: 1px solid #F44336;
    font-size: 24pt;
    width: 90%;
    margin: 20px auto;
}

.subheading {
    margin: 0 auto;
    text-align: center;
    font-size: 18pt;
    width: 100%;
}

.event-details > span {
    line-height: 1.5;
}

.event-title {
    border-bottom: 1px solid #F44336;
    width: 80%;
    text-align: center;
}

.new-btn {
    float: right;
}

.event-list {
    clear: right;
}

.audio-upload {
    width: 50%;
    font-size: 14px;
}

.audio-upload:hover {
    color: #F44336;
}

.event-edit {
    width: 50%;
    font-size: 14px;
}

.manage-info {
    font-size: 14pt;
    width: 80%;
    text-align: center;
    margin: 0px auto;
}

/************ Swipe Styles ************/
.swipedemoBasicUsage .demo-swipe {
    padding: 20px 10px; 
}
.swipedemoBasicUsage .no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none; 
}
.no-select {
    height: 100vh;
    width: 100%;
}
.swipeDirections {
    text-align: center;
    margin: 0 auto;
    padding: 40px;
    font-size: 24px;

}
.swipeButton {
    font-size: 16px;
    line-height: none;
    bottom: 100px;
}
.swipeButtonContainer .md-button{
    height: 100px;
    line-height: none;
}
.swipeScreen {
    height: 100vh;
}
/************ Cmark Counter ************/
.countContainer {
    line-height: 50px;
    font-size: 50px;
}
.cmarkCount {
    text-align: center;
    color: rgba(255,255,255,.5);
}
.md-toolbar-tools .eventTitle {
    font-size: 30px;
}

/************ Join Event Styles ************/
.join-input > input {
    border: none;
    border-bottom: 2px solid #F44336;
    font-size: 28px;
    text-align: center;
    background-color: #30303000;
    margin: 30px;
    color: #ffffff;
    text-transform: uppercase;
    outline: none;
    padding: 10px;
    width: 70%;
}

.content-clear {
    background-color: #33333300
}

.join-input > input::placeholder {
    color: #ffffffc7;
    text-transform: none;
}

.join-input > input:focus::-webkit-input-placeholder, .search-bar > input:focus::-webkit-input-placeholder {
    opacity: 0;
}

.join-btn {
    padding: 5px 25px 5px 25px;
    border-radius: 5px;
    font-size: 18px;
}

.joinEventContainer {
    height: 100vh;
    text-align: center;
    margin: auto 0;
    background-image: url('../assets/antenna-502680-unsplash.jpg'); 
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.6);
}

.join-speaker {
    text-decoration: none;
    font-size: 14pt;
    padding: 10px;
    color: #F44336;
    margin-top: 100px !important;
}

.complete-audio:hover {
    color: #F44336;
}

.complete-audio {
    font-size: 14px;
}

/************ Search Bar ************/
.search-bar > input {
    border: none;
    border-bottom: 2px solid #F44336;
    font-size: 16px;
    text-align: center;
    background-color: #303030;
    color: #ffffff;
}

.search-bar {
    display: flex;
    justify-content: center;
    padding-bottom: 25px;
    margin-top: 10px;
}

/************ Audio ************/
.cmark-card {
    font-size: 40px !important;
    display: flex;
}

audio {
    width: 80%;
}

.audio-div{
    display: flex;
    justify-content: center;
    padding-top: 15px;
}

.cmark-heading {
    margin: 0 auto;
    text-align: center;
    font-size: 36pt;
    width: 100%;
    padding-top: 15px;
    padding-bottom: 15px;
}

.cmark-noaudio {
    width: 90%;
    margin: 0 auto;
    text-align: center;
    padding-top: 15px;
    font-size: 27pt;
}

/************ My Events ************/
.event-cards {
    font-size: 14pt;
    border: 1px solid #F44336;
    margin-bottom: 35px;
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

.my-event-head {
    padding-bottom: 5px;
    font-size: 18pt;
    border-bottom: 2px solid #F44336;
}
.noEvents {
    font-size: 18px;
}

/* Dialog Styles */
md-dialog {
    border: 2px solid #F44336;
    /* padding: 20px; */
}

.event-input {
    margin: 5px;
}


.event-input > .md-input {
    font-size: 18px;
}

.join-input > .md-placeholder, md-input-container label:not(.md-no-float):not(.md-container-ignore){
    font-size: 18px;
}

.form-button {
    font-size: 14pt;
    /* padding: 10px; */
}

.md-datepicker {
    width: 300px;
}

.main-link {
    color: #ffffff;
    text-decoration: none;
    font-size: 14pt;
    padding: 20px;
}

.cmark-time {
    font-size: 12pt;
}

.join-code {
    border-bottom: 2px solid #F44336;
}

.cmark-comment {
    font-size: 14pt;
}

.comment-container {
    display: flex;
    justify-content: center;

}

